objects/copado__MultiCloudAutomation__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__DeployAPIName__c</fullName>
        <label>DeployAPIName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PackageImportAPIName__c</fullName>
        <label>PackageImportAPIName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PackageVersionCreateApiName__c</fullName>
        <label>PackageVersionCreateApiName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PlatformName__c</fullName>
        <label>PlatformName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__PromoteAPIName__c</fullName>
        <label>PromoteAPIName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MultiCloudAutomation</label>
    <pluralLabel>MultiCloudAutomations</pluralLabel>
</CustomObject>